fix(menu): stop sidebar adding display: none to collapsed item span t… (#155)

--- a/src/framework/theme/components/sidebar/_sidebar.component.theme.scss
+++ b/src/framework/theme/components/sidebar/_sidebar.component.theme.scss
@@ -83,12 +83,14 @@
           }
         }
 
-        .menu-items > .menu-item {
-          transition: border-color 1s ease;
-
+        > .menu-items > .menu-item > a {
           span, .chevron {
             display: none;
           }
+        }
+
+        .menu-items > .menu-item {
+          transition: border-color 1s ease;
 
           &.menu-group {
             display: block;
